--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "country-state-city": "^3.2.1",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.535.0",
     "mongoose": "^8.16.4",
     "next": "15.4.3",
     "next-auth": "^4.24.11",
@@ -19,8 +21,10 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
