--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "15.4.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
+    "react-datetime": "^3.3.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
