--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.16.4",
     "next": "15.4.3",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-datetime": "^3.3.1",
     "react-dom": "19.1.0",
@@ -44,6 +45,7 @@
     "sweetalert2": "^11.22.5",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
+    "web-push": "^3.6.7",
     "zod": "^4.1.3"
   },
   "devDependencies": {
@@ -55,6 +57,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
+    "@types/web-push": "^3.6.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "tailwindcss": "^4",
