--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,9 +1,18 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["ES2020"],
     "module": "CommonJS",
-    "outDir": ".",
+    "moduleResolution": "node",
+    "outDir": "dist",
+    "rootDir": ".",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "removeComments": true,
     "noEmit": false
   },
-  "include": ["server.ts"]
+  "include": ["server.ts"],
+  "exclude": ["node_modules", ".next", "pages", "app", "**/*.test.ts", "**/*.spec.ts"]
 }
