--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "15.4.3",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
+    "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-datetime": "^3.3.1",
     "react-dom": "19.1.0",
@@ -56,6 +57,7 @@
     "@types/leaflet": "^1.9.20",
     "@types/leaflet-routing-machine": "^3.2.9",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
