--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "deliver4me-nextjs",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' ts-node --project tsconfig.server.json server.ts",
-  "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build && tsc --project tsconfig.server.json",
-  "start": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=4096' node dist/server.js",
-  "lint": "next lint"
-},
+  "scripts": {
+    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' ts-node --project tsconfig.server.json server.ts",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build && tsc --project tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=4096' node dist/server.js",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -27,6 +27,7 @@
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.535.0",
+    "mime": "^4.1.0",
     "mongoose": "^8.16.4",
     "next": "15.4.3",
     "next-auth": "^4.24.11",
@@ -56,6 +57,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/leaflet": "^1.9.20",
     "@types/leaflet-routing-machine": "^3.2.9",
+    "@types/mime": "^3.0.4",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
