--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' ts-node --project tsconfig.server.json server.ts",
     "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build && tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=4096' node dist/server.js",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:security": "ts-node --project tsconfig.json scripts/add-security-fields.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -22,12 +23,14 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-table": "^8.21.3",
+    "@types/dotenv": "^6.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
