--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -39,6 +40,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-/uploads/loads/*
-/uploads/profile/*
-/uploads/cms/*
+!/uploads/loads/*
+!/uploads/profile/*
+!/uploads/cms/*
