--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "deliver4me-nextjs",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' ts-node --project tsconfig.server.json server.ts",
-    "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=4096' node dist/server.js",
-    "lint": "next lint",
-    "migrate:security": "ts-node --project tsconfig.json scripts/add-security-fields.ts"
-  },
+"scripts": {
+  "dev": "node --max-old-space-size=6144 --expose-gc --optimize-for-size node_modules/ts-node/dist/bin.js --project tsconfig.server.json server.ts",
+  "build": "node --max-old-space-size=8192 --expose-gc node_modules/next/dist/bin/next build && tsc --project tsconfig.server.json",
+  "start": "cross-env NODE_ENV=production node --max-old-space-size=4096 --expose-gc dist/server.js",
+  "lint": "next lint"
+},
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
