--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dev": "node --max-old-space-size=6144 --expose-gc --optimize-for-size node_modules/ts-node/dist/bin.js --project tsconfig.server.json server.ts",
   "build": "node --max-old-space-size=8192 --expose-gc node_modules/next/dist/bin/next build && tsc --project tsconfig.server.json",
   "start": "cross-env NODE_ENV=production node --max-old-space-size=4096 --expose-gc dist/server.js",
-  "lint": "next lint"
+  "lint": "next lint",
+  "migrate": "ts-node scripts/adminSeeder.ts"
 },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
